stylesheet.css
/* ... */
.success {
    color: #00FF00;
}

.warning {
    color: #FFFF00;
}

.alert {
    color: #FF0000;
}

.callHistory {
    display: none;
    position: absolute;
    top: 88px;
    left: 378px;
    width: 265px;
    height: 420px;
    background-color: #191414;
    border-radius: 4px;
    border: 2px solid #DDDDDD;
    box-shadow: 0px 0px 10px #999999;
}

.callHistory .hist-date {
    position: absolute;
    color: #0082FF;
    left: 20px;
    font-family:arial;
    font-size: 10px;
}

.callHistory .hist-length {
    position: absolute;
    color: #0082FF;
    left: 205px;
    font-family:arial;
    font-size: 10px;
}

.callHistory .rowSpace {
    padding: .5em;
}

.callStats {
    display: none;
    position: absolute;
    top: 10px;
    color: #666666;
    left: 660px;
    width: 400px;
    padding: 2px;
    border-radius: 4px;
    border: 2px solid #DDDDDD;
    box-shadow: 0px 0px 10px #999999;
}

.callStats .statsVideo {
    position: absolute;
    white-space: pre-wrap;
    color: #0082FF;
    left: 10px;
    font-family:arial;
    font-size: 18px;
    text-decoration: none;
}

.callStats .statsAudio {
    position: absolute;
    white-space: pre-wrap;
    color: #0082FF;
    left: 260px;
    float: left;
    font-family:arial;
    font-size: 18px;
    text-decoration: none;
}

.unsupported {
    position: absolute;
    top: 240px;
    left: 30px;
    width: 600px;
    background-color: #191414;
    text-align: center;
    display:none;
    color: white;
    z-index: 10;
}
#whiteboard_unsupported, #screen_sharing_unsupported {
    position:relative;
    top:0px;
    left:0px;
    margin: 10px;
    background: red;
}
#screen_sharing_unsupported {
    display:none;
}

.stats-table-container, .stats-graph-sub-container {
    display: none;
}

.stats0-selected .kiloBitsSentPerSecond-video,
.stats1-selected .kiloBitsSentPerSecond-audio,
.stats2-selected .kiloBitsReceivedPerSecond-video,
.stats3-selected .kiloBitsReceivedPerSecond-audio,
.stats4-selected .packetsLost-video,
.stats5-selected .packetsLostPer-video,
.stats6-selected .packetsLost-audio,
.stats7-selected .packetsLostPer-audio,
.stats8-selected .googFrameRateSent-video,
.stats9-selected .googFrameRateReceived-video,
.stats10-selected .audioOutputLevel-audio,
.stats11-selected .audioInputLevel-audio,
.stats12-selected .googFrameWidthReceived-video,
.stats13-selected .googFrameHeightReceived-video,
.stats14-selected .googFrameWidthSent-video,
.stats15-selected .googFrameHeightSent-video,
.stats16-selected .googRtt-audio,
.stats17-selected .googJitterReceived-audio {
    display: block;
}

.client .table {
    display: table;
    width:100%;
}
.client .fixed {
    table-layout: fixed;
}
.client .collapse {
    border-collapse: collapse;
}

.client .cell {
    display: table-cell;
}

.client .heading {
    display: table-row;
    font-weight: bold;
}

.client .row {
    display: table-row;
    margin: 0;
}
.client .row:before, .client .row:after {
    display: none;
}

.client .group {
    display: table-row-group;
}

.stats-graph-sub-container canvas {
    width: 100%;
}

.resolutionSubType{
    display:none;
}

.client .fadeable{
    opacity: 0;
    display: block;
    z-index: -1;
}
.client .fileshare-container {
    display:none;
}
.enable-file-share .fileshare-container {
    display:table;
}
.holdAndAnswerButton, .dropAndAnswerButton, .acceptIncomingCall {
    display:none;
}

.started .holdAndAnswerButton,
.started .dropAndAnswerButton,
.client:not(.started) .acceptIncomingCall {
    display:inline-block;
}

.enable-mute.unmuted.started .muteAudioIcon,
.enable-mute.muted.started .unmuteAudioIcon,
.enable-full-screen.full-screen-contracted .fullScreenExpand,
.enable-full-screen.full-screen-expanded .fullScreenContract,
.enable-self-view.self-view-enabled .selfViewDisable,
.enable-self-view.self-view-disabled .selfViewEnable,
.enable-self-view.self-view-enabled .localVideo,
.enable-settings .settings,
.enable-dialpad.dialpad-shown .dialpadIconHide,
.enable-dialpad.dialpad-hidden .dialpadIconShow,
.started .hangup, .calling .hangup,
.enable-call-control.connected .call,
.enable-transfer.started .transfer,
.enable-timer.started .timer,
.client:not(.held).enable-hold.started .hold,
.enable-hold.started.held .resume,
.enable-screen-sharing.screen-sharing-off .shareScreen,
.enable-screen-sharing.screen-sharing .stopShareScreen,
.enable-file-share.started .file_share
{
    transition: all 1s linear;
    opacity: 1;
    z-index: 20;
}
.enable-transfer.started.transfer-visible .transferPopup,
.client:not(.disconnected).auth-visible .authPopup,
.reInvite .reInvitePopup,
.enable-dialpad.dialpad-shown .dialpad,
.enable-settings.settings-shown .settingsPopup,
.incomingCall .callPopup{
    transition: all 1s linear;
    opacity: 1;
    z-index: 100;
}
/* ... */

